--- a/index.html
+++ b/index.html
@@ -55,6 +55,47 @@
         </div>
       </div>
       <!-- End of SideBar -->
+      <!-- Navigation -->
+      <nav class="navigation">
+        <div class="navigation-header">
+          <h1 class="navigation-heading">Grand Hotel</h1>
+
+          <form action="" class="navigation-search">
+            <input
+              type="text"
+              class="navigation-search-input"
+              placeholder="Search"
+            />
+            <button class="navigation-search-btn">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+        </div>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">home</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">About us</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Rooms</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Events</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Customers</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">Contents</a>
+          </li>
+        </ul>
+        <div class="copyright">
+          <p>&copy; 2018. Grand Hotel. All Rights Reserved.</p>
+        </div>
+      </nav>
+      <!-- End of Navigation -->
     </div>
     <!-- End of navBar -->
   </body>
