--- a/index.html
+++ b/index.html
@@ -101,5 +101,18 @@
       <!-- End of Navigation -->
     </div>
     <!-- End of navBar -->
+    <!-- HEADER -->
+    <header class="header">
+      <div class="brand">
+        <div><img src="img/crown.png" alt="" width="80" /></div>
+        <h3 class="hotel-heading">Grand Hotel</h3>
+      </div>
+      <div class="banner">
+        <h1 class="banner-heading">Welcome to Grand Hotel</h1>
+        <p class="banner-paragraph">Make your life Luxurious.</p>
+        <button class="banner-button">Check Out</button>
+      </div>
+    </header>
+    <!-- END OF HEADER -->
   </body>
 </html>
