customer review complete

--- a/index.html
+++ b/index.html
@@ -114,5 +114,155 @@
       </div>
     </header>
     <!-- END OF HEADER -->
+    <!-- ABOUT US -->
+    <section class="about-us">
+      <div class="about-us-content">
+        <h1 class="about-us-heading">About Us</h1>
+        <div class="underline">
+          <div class="small-underline"></div>
+          <div class="big-underline"></div>
+        </div>
+        <h3 class="sub-heading">Grand Hotel</h3>
+        <p class="about-us-paragraph">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged.
+        </p>
+        <button class="about-us-btn">
+          Read MORE<i class="fas fa-angle-double-right btn-arrow"></i>
+        </button>
+      </div>
+      <div class="about-us-images">
+        <img src="img/about-us-img-1.jpeg" alt="" class="image image-1" />
+        <img src="img/about-us-img-2.jpeg" alt="" class="image image-2" />
+        <img src="img/about-us-img-3.jpeg" alt="" class="image image-3" />
+        <img src="img/about-us-img-4.jpeg" alt="" class="image image-4" />
+      </div>
+    </section>
+    <!-- END OF ABOUT US -->
+    <!-- ROOMS -->
+    <section class="rooms">
+      <div class="common-header">
+        <h1 class="common-heading">Rooms in Grand Hotel</h1>
+        <div class="underline">
+          <div class="small-underline"></div>
+          <div class="big-underline"></div>
+        </div>
+      </div>
+      <div class="rooms-cards-wrapper">
+        <div class="room-card">
+          <img src="img/single-room.jpeg" alt="" class="room-img" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">Single Room</h4>
+            <p class="room-card-paragraph">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="room-price">$99.0</p>
+            <button class="room-card-btn">
+              Book Now
+              <i class="fas fa-angle-double-right btn-arrow"></i>
+            </button>
+          </div>
+        </div>
+        <div class="room-card">
+          <img src="img/double-room.jpeg" alt="" class="room-img" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">Double room</h4>
+            <p class="room-card-paragraph">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="room-price">$199.0</p>
+            <button class="room-card-btn">
+              Book Now
+              <i class="fas fa-angle-double-right btn-arrow"></i>
+            </button>
+          </div>
+        </div>
+        <div class="room-card">
+          <img src="img/lux.jpeg" alt="" class="room-img" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">lux</h4>
+            <p class="room-card-paragraph">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="room-price">$299.0</p>
+            <button class="room-card-btn">
+              Book Now
+              <i class="fas fa-angle-double-right btn-arrow"></i>
+            </button>
+          </div>
+        </div>
+        <div class="room-card">
+          <img src="img/vip.jpeg" alt="" class="room-img" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">VIP</h4>
+            <p class="room-card-paragraph">
+              Lorem Ipsum is simply dummy text of the printing.
+            </p>
+            <p class="room-price">$399.0</p>
+            <button class="room-card-btn">
+              Book Now
+              <i class="fas fa-angle-double-right btn-arrow"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="btn-wrapper">
+        <button class="rooms-btn">Check All Rooms</button>
+      </div>
+    </section>
+    <!-- END OF ROOMS -->
+    <!-- Customers -->
+    <section class="customers">
+      <div class="common-header">
+        <h1 class="common-heading">Our Customers</h1>
+        <div class="underline">
+          <div class="small-underline"></div>
+          <div class="big-underline"></div>
+        </div>
+      </div>
+      <p class="customers-paragraph">
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry's standard dummy text ever
+        since the 1500s, when an unknown printer took a galley of type and
+        scrambled it to make a type specimen book.
+      </p>
+      <div class="customers-card-wrapper">
+        <div class="customer-card">
+          <div class="customer-image-wrapper">
+            <img src="img/customer-1.jpeg" alt="" class="customer-image" />
+          </div>
+          <div class="customer-info">
+            <h3 class="customer-fullname">Helen Doe</h3>
+            <p class="customer-paragraph-1">Happy Customer</p>
+            <p class="customer-paragraph-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
+          </div>
+        </div>
+        <div class="customer-card">
+          <div class="customer-image-wrapper">
+            <img src="img/customer-2.jpeg" alt="" class="customer-image" />
+          </div>
+          <div class="customer-info">
+            <h3 class="customer-fullname">Monica Smith</h3>
+            <p class="customer-paragraph-1">Happy Customer</p>
+            <p class="customer-paragraph-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of customers -->
   </body>
 </html>
